# ai-improviser-plugin

./: CMakeLists.txt  README.md
src/: AvoidStrategy.cpp  AvoidStrategy.h  Behaviours.cpp  Behaviours.h  ChordDetector.cpp  ChordDetector.h  DinvernoPolyMarkov.cpp  DinvernoRandom.cpp  FeedbackControls.h  ImproviserControlGUI.cpp  ImproviserControlGUI.h  MIDIMonitor.cpp  MIDIMonitor.h  NoteIndicatorComponent.cpp  NoteIndicatorComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PolyLeadFollow.cpp  PolyLeadFollow.h  SlomoStrategy.cpp  SlomoStrategy.h  StatusWidgets.cpp  StatusWidgets.h  dinvernoSystem.cpp  dinvernoSystem.h
src/MarkovModelCPP/src/: MarkovChain.cpp  MarkovChain.h  MarkovManager.cpp  MarkovManager.h  MarkovTest.cpp
src/old/: DinvernoPolyMarkov.cpp  DinvernoRandomEnergy.cpp  FeedbackControls.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
